@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-04-29"
+set version "2025-06-14"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -776,13 +776,14 @@ if {[llength $maps] == 0} {error_message [mc e11] exit}
 cd $themes_folder
 set themes [find_files "" "*.xml"]
 cd $cwd
-lappend themes (DEFAULT) (OSMARENDER)
+lappend themes (OSMARENDER)
 if {$server_version >= 250000} {
   lappend themes (MOTORIDER) (BIKER)
 } elseif {$server_version >= 220000} {
   lappend themes (MOTORIDER) (MOTORIDER_DARK)
 }
 set themes [lsort -dictionary $themes]
+set themes [linsert $themes 0 (DEFAULT)]
 
 # --- Begin of main window left column
 
@@ -1687,7 +1688,12 @@ pack .server.config -pady {5 0}
 
 # Rendering engine
 
-set pattern marlin-*-Unsafe-OpenJDK11
+set pattern marlin-*-Unsafe-OpenJDK
+if {$java_version < 17} {
+  append pattern 11
+} else  {
+  append pattern 1\[17\]
+}
 set engines [glob -nocomplain -tails -type f \
 	-directory [file dirname $server_jar] $pattern.jar]
 lappend engines (default)
